CHATS_SIT/force-app/main/default/objects/sfsit_t_cw_addnl_info_hist__x.object
<CustomObject>
    <description>sfsit$t_cw_addnl_info_hist</description>
    <externalDataSource>Heroku_Connect_datasource</externalDataSource>
    <externalName>sfsit$t_cw_addnl_info_hist</externalName>
    <fields>
        <fullName>cde_prog_area__c</fullName>
        <description>cde_prog_area</description>
        <externalDeveloperName>cde_prog_area</externalDeveloperName>
        <label>Area Program Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>dte_change_last__c</fullName>
        <description>dte_change_last</description>
        <externalDeveloperName>dte_change_last</externalDeveloperName>
        <label>Last Modified Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>idn_case_referal__c</fullName>
        <description>idn_case_referal</description>
        <externalDeveloperName>idn_case_referal</externalDeveloperName>
        <label>Case Referal ID</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>idn_client__c</fullName>
        <description>idn_client</description>
        <externalDeveloperName>idn_client</externalDeveloperName>
        <label>Client ID</label>
        <precision>9</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>idn_cw_addnl_info__c</fullName>
        <description>idn_cw_addnl_info</description>
        <externalDeveloperName>idn_cw_addnl_info</externalDeveloperName>
        <label>CW Additional Information ID</label>
        <length>50</length>
        <referenceTargetField>T_CW_ADDNL_INFO__c.IDN_EXTNL__c</referenceTargetField>
        <referenceTo>T_CW_ADDNL_INFO__c</referenceTo>
        <relationshipLabel>CW Details Legacy History</relationshipLabel>
        <relationshipName>sfsit_t_cw_addnl_info_hist</relationshipName>
        <type>IndirectLookup</type>
    </fields>
    <fields>
        <fullName>idn_cw_addnl_info_hist__c</fullName>
        <description>idn_cw_addnl_info_hist</description>
        <externalDeveloperName>idn_cw_addnl_info_hist</externalDeveloperName>
        <label>CW Additional Information ID History</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>idn_mapng_intfc__c</fullName>
        <description>idn_mapng_intfc</description>
        <externalDeveloperName>idn_mapng_intfc</externalDeveloperName>
        <label>Mapping interface</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>idn_state__c</fullName>
        <description>idn_state</description>
        <externalDeveloperName>idn_state</externalDeveloperName>
        <label>State ID</label>
        <length>9</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>idn_user_change_last__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>idn_user_change_last</description>
        <externalDeveloperName>idn_user_change_last</externalDeveloperName>
        <label>Last Modified By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>sfsit_t_cw_addnl_info_hist</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ind_record_delete_logcl__c</fullName>
        <description>ind_record_delete_logcl</description>
        <externalDeveloperName>ind_record_delete_logcl</externalDeveloperName>
        <label>Logical Deleted Record</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>nbr_seq_hist__c</fullName>
        <description>nbr_seq_hist</description>
        <externalDeveloperName>nbr_seq_hist</externalDeveloperName>
        <label>Number Sequence history</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rec_moe__c</fullName>
        <description>rec_moe</description>
        <externalDeveloperName>rec_moe</externalDeveloperName>
        <label>Maintenance of Effort Record</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tanf_rcvng__c</fullName>
        <description>tanf_rcvng</description>
        <externalDeveloperName>tanf_rcvng</externalDeveloperName>
        <label>TANF Receving</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <label>CW Addl Info History</label>
    <pluralLabel>CW Addl Info History</pluralLabel>
</CustomObject>